# tokenbox

./: .gitignore  Info.plist  Package.resolved  Package.swift  README.md  install.sh  uninstall.sh
Resources/: pricing.json
Sources/App/: AppState.swift  TokenBoxApp.swift
Sources/Models/: AppConfig.swift  Database.swift  TokenDataStore.swift  UsageRecord.swift
Sources/Services/: AppVersion.swift  DataAggregator.swift  JSONLParser.swift  JSONLWatcher.swift  LiveFileWatcher.swift  PricingService.swift  USBDeviceService.swift  UpdateChecker.swift
Sources/Sharing/: CloudSharingClient.swift  SharingManager.swift
Sources/Views/: DashboardDrawer.swift  FriendsView.swift  LeaderboardSidePanel.swift  MainWindowView.swift  MenuBarIcon.swift  MenuBarState.swift  MenuBarView.swift  SettingsView.swift
Tests/DataLayerTests/: DataAggregatorTests.swift  DatabaseTests.swift  JSONLParserTests.swift  PricingServiceTests.swift
Tests/SharingTests/: SharingTests.swift
Tests/SkillTests/: db.test.mjs  (+4 more)
Windows/: .gitignore  README.md  package-lock.json  package.json
Windows/src-tauri/: Cargo.toml  tauri.conf.json
Windows/src-tauri/capabilities/: default.json
Windows/src-tauri/icons/: README.md  generate-icons.mjs
Windows/src-tauri/src/: aggregator.rs  data_store.rs  database.rs  jsonl_parser.rs  lib.rs  main.rs  paths.rs  sharing.rs  sharing_manager.rs  tray.rs  watchers.rs
hooks/: status-relay.mjs  status-relay.sh
site/: index.html
skill/: SKILL.md  collect.mjs  install.sh  package-lock.json  package.json
tui/: app.mjs  index.mjs  package-lock.json  package.json
(+45 files in other folders)
