[package]
name = "tokenbox-windows"
version = "0.1.0"
edition = "2021"
description = "TokenBox — Split-flap display for Claude token usage"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
